refactor: Implement refinements for Catalog Service
This commit introduces several key refinements to the Catalog Service:

1.  **Future-Proof PriceDetailDto**:
    *   Redefined `PriceDetailDto` to include a list of `PricingComponent`s, providing a detailed breakdown of price calculation (base, overrides, discounts, surcharges).
    *   Updated `PricingService` to populate this new DTO, including a stubbed `DynamicPricingEngine` interface for future extensibility.
    *   Adjusted `CartService` to utilize the new pricing structure for cart calculations and display.

2.  **Optimistic Locking**:
    *   Added `@Version` to `CatalogItemEntity` and `BulkPricingRuleEntity`.
    *   Applied `@Retryable` to service methods in `ItemService`, `PricingService`, and `CartService` to handle optimistic lock exceptions on concurrent updates. `@EnableRetry` is active.

3.  **Outbox Pattern for Transactional Event Publishing**:
    *   Implemented `OutboxEventEntity`, `OutboxEventRepository`, and `OutboxEventService`.
    *   Refactored all business services to save events to the outbox table transactionally instead of direct Kafka publishing.
    *   Created `OutboxEventPollerService` with `@Scheduled` task to poll and publish events from the outbox to Kafka, including basic retry and error handling.
    *   Added relevant configurations for the poller.
    *   **Note**: Existing integration tests relying on immediate Kafka event publishing require updates (e.g., using Awaitility) to accommodate the polling delay. Unit tests also need to verify outbox saves instead of direct Kafka calls. This test refactoring is pending.

4.  **Kafka-based Cache Invalidation for Redis**:
    *   Defined `CacheKeyConstants` and updated `CartService` to use them.
    *   Implemented `CacheInvalidationService` with Kafka listeners for item, price, bulk rule, and stock events. It currently simulates eviction of item-specific caches and logs TODOs for complex cart invalidation scenarios.
    *   Added